# cmake-c-template

./: CMakeLists.txt  README.md
include/: constants.h  point.h
lib/: CMakeLists.txt
lib/custom/: CMakeLists.txt
lib/custom/include/: custom.h
lib/custom/src/: custom.c
lib/mylib/: CMakeLists.txt
lib/mylib/include/: mylib.h
lib/mylib/src/: mylib.c
lib/shared/: CMakeLists.txt
lib/shared/include/: shared.h
lib/shared/src/: shared.c
lib/static/: CMakeLists.txt
lib/static/include/: static.h
lib/static/src/: static.c
src/: main.c  point.c
